changed some stuff

--- a/lesson 4/directory.html
+++ b/lesson 4/directory.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="html page for my chamber website">
-    <title>Chamber Join Page</title>
+    <title>Directory Page</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
@@ -51,15 +51,15 @@
         <table class="table"></table>
     </main>
    
-        <footer>
-            <a id="logo-link2" href="index4.html">
-                <img src="images/travel.webp" style="max-width:100%;height:auto;" alt="logo-img2">
-            </a>
-            <h2 id="copyright"></h2>
-            <h6>Conner-Wadsworth | WDD230</h6>
-            <h6>(706)-288-4751</h6>
-            <div id="year"></div>
-        </footer>
+    <footer>
+        <a id="logo-link2" href="index4.html">
+            <img src="images/travel.webp" style="max-width:100%;height:auto;" alt="logo-img2">
+        </a>
+        <h2 id="copyright"></h2>
+        <h6>Conner-Wadsworth | WDD230</h6>
+        <h6>(706)-288-4751</h6>
+        <div id="year"></div>
+    </footer>
         <script src="script/directory.js"></script>
 </body>
 
