--- a/lesson 4/index4.html
+++ b/lesson 4/index4.html
@@ -47,22 +47,15 @@
 
     <main id="content">
         <section id="hero">
-        <!-- <picture>    
-            <source srcset="images/img500.jpg" media="(min-width:
-            600px) and (max-width: 799px)">
-            <source srcset="images/img1000.jpg" media="(min-width:
-            1500px)">
-            <img src="images/img200.jpg" alt="cityofaugusta"> -->
             <img id ="augustageorgia1" src="images/mediumone1.jpg" alt="mediumimg">
             <img id="augustageorgia" src="images/bigone1.jpg" alt="The city of Augusta">
             <img id="augustageorgia3" src="images/smallone1.jpg" alt="smallimg">
-            <h3 id="join_us">Join the Chamber</h3>
-        <!-- </picture> -->
+            <button onclick="window.location.href='https:conwads.github.io/wdd230/lesson%204/join.html';"id="join_us">Join the Chamber</button>
             </section>
 
         <section id="events">
             <h1>Ribbon Cutting</h1>
-            <h3>Squealers Rib</h3>
+            <h3>🍖 Squealers Southern Ribs 🍖</h3>
             <p>Join us for the grand opening for Squealers Rib, Thursday at 1:00 p.m. Squealers Rib is the best spot in town if you're looking for the best bbq Georgia has to offer!</p>
         </section>
 
@@ -90,6 +83,7 @@
         <section id="join">
             <h1>Join us!</h1>
             <p>Discover how to join the Augutsa Georgia Chamber of Commerce and see how it will benefit your organization!</p>
+            <button onclick="window.location.href='https:conwads.github.io/wdd230/lesson%204/join.html';"id="join_us1">Join</button>
         </section>
 
         <div class="spotlights">
