--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li>Lesson 8: <a href="week09/prophets.html" target="_blank">Week 09</a></li>
             <li>Lesson 9: <a href="lesson 4/directory.html" target="_blank">directory page</a></li>
             <li>Lesson 10:<a href="lesson10/weather.html" target="_blank">Weather Activity</a></li>
-            <li>Lesson 11:<a href="">Title</a></li>
+            <li>Lesson 11:<a href="lesson11/bountifulsiteplan.html" target="_blank">Bountiful Site Plan</a></li>
         </ul>
         <section>
             <hr>
