final website plan changes

--- a/lesson11/bountifulsiteplan.html
+++ b/lesson11/bountifulsiteplan.html
@@ -26,7 +26,7 @@
             <h2>Target Audience</h2>
             <div>
                 <h3></h3>
-                <p>The target audience for Bountiful Foods website are health-conscious
+                <p>The target audience for Bountiful Foods website are Health Enthusiast "health-conscious"
                     individuals who are interested in buying organic and healthy food products.
                     They are generally in the age range of 25 to 45, have higher income levels,
                     and are willing to pay a premium for quality and sustainably produced food products.
@@ -34,10 +34,15 @@
                 </p>
             </div>
             <div>
-                <h3>Dieters</h3>
-                <p>These are individuals who are currently on a dieting program or who are seeking to 
-                    lose weight. We will appeal to these individuals by advartising the organic, healthy, 
-                    and fresh aspects of the food we are selling.
+                <h3>Health Enthusiast</h3>
+                <p>A health enthusiast is someone who is passionate about promoting
+                    and maintaining a healthy lifestyle. They prioritize physical fitness,
+                    proper nutrition, and mental well-being in their daily routine. They are often
+                    avid consumers of health-related information and seek out the latest research
+                    and trends in the field. They may also participate in activities such as yoga,
+                    meditation, or sports to improve their overall health. Health enthusiasts may
+                    also encourage others to adopt healthier habits and may even pursue careers in
+                    fields related to health and wellness.
                 </p>
             </div>
         </section>
@@ -68,7 +73,9 @@
         </section>
         <section>
             <h2>Wireframe Sketches</h2>
-            <img src="images/bounty-foods.png" alt="wireframes">
+            <img src="images/bigwire.png" alt="wireframes">
+            <img src="images/mediumwire.png" alt="wireframes">
+            <img src="images/smallwire.png" alt="wireframes">
         </section>
     </main>
 </body>
