Bountiful Site Progress Day 01

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li>Lesson 9: <a href="lesson 4/directory.html" target="_blank">directory page</a></li>
             <li>Lesson 10:<a href="lesson10/weather.html" target="_blank">Weather Activity</a></li>
             <li>Lesson 11:<a href="lesson11/bountifulsiteplan.html" target="_blank">Bountiful Site Plan</a></li>
+            <li>Bountiful Website:<a href="FinalWebsite/bountiful.html" target="_blank">My Bountiful Site</a></li>
         </ul>
         <section>
             <hr>
