--- a/FinalWebsite/aboutus.html
+++ b/FinalWebsite/aboutus.html
@@ -29,13 +29,53 @@
     <p id="banner"></p>
 
 
-    <main id="maincontent">
-        
+    <main id="about_us">
+        <section id="about-info">
+            <h1>About Us</h1>
+            <p>
+                Bountiful Foods is a company that is passionate about providing
+                its customers with healthy and delicious fruit drinks made from the
+                freshest, locally-sourced fruits available in San Diego, California.
+                At Bountiful Foods, we believe that everyone should have access to healthy
+                and refreshing beverages that not only taste great but are also good for you.
+                We source our fruits from local farms, ensuring that they are of the highest quality
+                and bursting with flavor. Our commitment to using only natural and fresh ingredients is
+                at the core of our philosophy. We believe that our customers deserve the very best, and
+                that's why we are dedicated to providing them with nutritious and delicious fruit drinks
+                that are both refreshing and satisfying. Join us in our mission to promote healthy living
+                by enjoying one of our fruit drinks today!
+            </p>
+
+        </section>
+        <div id="map">
+            <iframe id="map-img"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d429154.7584949196!2d-117.38917835355261!3d32.82481751237785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9530fad921e4b%3A0xd3a21fdfd15df79!2sSan%20Diego%2C%20CA!5e0!3m2!1sen!2sus!4v1680569203212!5m2!1sen!2sus"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+
+        <section id="surfers">
+            <img id="surfers-img" src="https://via.placeholder.com/150 " data-src="images/surfers.jpg"
+                alt="surfers on the beach" />
+        </section>
+
+        <section id="beach">
+            <img id="beach-img" src="https://via.placeholder.com/150 " data-src="images/beach.jpg"
+                alt="The san diego beach" />
+        </section>
+
+        <section id="ocean">
+            <img id="ocean-img" src="https://via.placeholder.com/150 " data-src="images/ocean.jpg" alt="The Ocean" />
+        </section>
+
+        <section id="pineapple">
+            <img id="pineapple-img" src="https://via.placeholder.com/150 " data-src="images/pineapple.jpg" alt="A pineapple" />
+        </section>
+
     </main>
     <footer>
         <div class="directions">
             <p>Directions</p>
-            <p2>4280 Deerwood Lane Evans, Georgia</p2>
+            <p2>39700 Cantrell Rd, Temecula, CA 92591</p2>
         </div>
         <div class="contact">
             <p>Contact</p>
@@ -58,10 +98,16 @@
         </div>
         <div class="copyright">
             <p>Copyright</p>
-            <p2>Text here</p2>
+            <p2>Conner Wadsworth WDD 230</p2>
         </div>
+
+        <div>Last Updated: <span id="lastModified"></span></div>
+
     </footer>
-    <script src="script/bountiful.js"></script>
+    <script src="scripts/bountiful.js"></script>
+    <script src="scripts/lazyload.js"></script>
+    <script src="scripts/aboutus.js"></script>
+    <script src="lastModified"></script>
 
 </body>
 
