--- a/FinalWebsite/bountiful.html
+++ b/FinalWebsite/bountiful.html
@@ -37,7 +37,15 @@
         <div id="mainbody">
             <div id="sandiego">
                 <h1>San Diego</h1>
-                <p>dckjnsdkcnjncnsdivknnncdnsn</p>
+                <p>San Diego California is known for having the best weather in the world.
+                    Average Temperatures stay around 70 degrees Fahrenheit and there is roughly 
+                    260 days of sunshine each year. This leads to some of the best and freshest
+                    fruit the US has to offer. Other than fruit, the city of San Diego is home
+                    to over 1.3 million people which is no surpise when you consider that it's located on the coast 
+                    of the Pacific Ocean. On the coast are some of the most beautiful beaches in
+                    the world, including La Jolla Cove and Coronado Beach. San Diego is home to the
+                    largest urban park in the United States, Balboa Park, which spans 1,200 acres and
+                    features 15 museums, several theaters, and the world-famous San Diego Zoo. </p>
             </div>
             <div id="sandiegoimg">
                 <img src="images/sandiegopic.jpg" alt="">
@@ -55,7 +63,7 @@
     <footer>
         <div class="directions">
             <h2>Directions</h2>
-            <p>4280 Deerwood Lane Evans, Georgia</p>
+            <p>39700 Cantrell Rd, Temecula, CA 92591</p>
         </div>
         <div class="contact">
             <h2>Contact</h2>
@@ -78,10 +86,14 @@
         </div>
         <div class="copyright">
             <h2>Copyright</h2>
-            <p>Text here</p>
+            <p>Conner Wadsworth WDD 230</p>
         </div>
+
+        <div>Last Updated: <span id="lastModified"></span></div>
     </footer>
-    <script src="script/bountiful.js"></script>
+    <script src="scripts/weather.js"></script>
+    <script src="scripts/bountiful.js"></script>
+    <script src="lastModified"></script>
 
 </body>
 
