3rd changes made to bountiful

--- a/FinalWebsite/aboutus.html
+++ b/FinalWebsite/aboutus.html
@@ -103,6 +103,8 @@
 
         <div>Last Updated: <span id="lastModified"></span></div>
 
+        <div id="year"></div>
+
     </footer>
     <script src="scripts/bountiful.js"></script>
     <script src="scripts/lazyload.js"></script>
