--- a/FinalWebsite/fresh.html
+++ b/FinalWebsite/fresh.html
@@ -128,6 +128,8 @@
 
         <div>Last Updated: <span id="lastModified"></span></div>
 
+        <div id="year"></div>
+
     </footer>
     <script src="scripts/bountiful.js"></script>
     <script src="scripts/drinkmix.js"></script>
