--- a/FinalWebsite/bountiful.html
+++ b/FinalWebsite/bountiful.html
@@ -27,38 +27,35 @@
         </header>
     </div>
     <p id="banner"></p>
-
-
-    <main id="maincontent">
-        <div id="hero">
-            <img src="images/bountifulheroimg.jpg" alt="">
-
-        </div>
-        <div id="mainbody">
-            <div id="sandiego">
-                <h1>San Diego</h1>
-                <p>San Diego California is known for having the best weather in the world.
-                    Average Temperatures stay around 70 degrees Fahrenheit and there is roughly 
+    <div id="hero">
+        <img src="images/fuitheroimgone.jpg" alt="">
+    </div>
+    <main>
+        <section id="sandiego">
+            <section class="sandiegotext">
+                <h1 id="sandiegotitle">San Diego</h1>
+                <p id="sandiegopara">San Diego California is known for having the best weather in the world.
+                    Average Temperatures stay around 70 degrees Fahrenheit and there is roughly
                     260 days of sunshine each year. This leads to some of the best and freshest
                     fruit the US has to offer. Other than fruit, the city of San Diego is home
-                    to over 1.3 million people which is no surpise when you consider that it's located on the coast 
+                    to over 1.3 million people which is no surpise when you consider that it's located on the coast
                     of the Pacific Ocean. On the coast are some of the most beautiful beaches in
                     the world, including La Jolla Cove and Coronado Beach. San Diego is home to the
                     largest urban park in the United States, Balboa Park, which spans 1,200 acres and
                     features 15 museums, several theaters, and the world-famous San Diego Zoo. </p>
-            </div>
-            <div id="sandiegoimg">
-                <img src="images/sandiegopic.jpg" alt="">
-            </div>
-            <div id="weather">
-                <h1>Weather</h1>
-                <p>kvnjsd vnkdsnjs ndksns</p>
-            </div>
-            <div id="drink">
-                <h1>Drink Mixed Order</h1>
-                <p>sjdccjn dkjncsdk jdcns</p>
-            </div>
-        </div>
+            </section>
+            <img id="sandiegoimg" src="images/sandiego3.jpg" alt="">
+        </section>
+        <section id=weatherdrink>
+            <section class="weather">
+                <h1 id="weatherhd">Weather</h1>
+                <p id="weatherpara">kvnjsd vnkdsnjs ndksns</p>
+            </section>
+            <section class="drink">
+                <h1 id="drinkhd">Drink Mixed Order</h1>
+                <p id="drinkpara">sjdccjn dkjncsdk jdcns</p>
+            </section>
+        </section>
     </main>
     <footer>
         <div class="directions">
@@ -87,9 +84,9 @@
         <div class="copyright">
             <h2>Copyright</h2>
             <p>Conner Wadsworth WDD 230</p>
+            <p>&copy; 2023 Bountiful Foods</p>
+            <p>Last Modified: <span id="modified"></span></p>
         </div>
-
-        <div>Last Updated: <span id="lastModified"></span></div>
     </footer>
     <script src="scripts/weather.js"></script>
     <script src="scripts/bountiful.js"></script>
