More changes baby

--- a/FinalWebsite/bountiful.html
+++ b/FinalWebsite/bountiful.html
@@ -58,7 +58,7 @@
         </section>
     </main>
     <footer>
-        <div class="directions">
+        <div class="directions">p
             <h2>Directions</h2>
             <p>39700 Cantrell Rd, Temecula, CA 92591</p>
         </div>
