more changes mang

--- a/FinalWebsite/aboutus.html
+++ b/FinalWebsite/aboutus.html
@@ -28,11 +28,10 @@
     </div>
     <p id="banner"></p>
 
-
     <main id="about_us">
         <section id="about-info">
-            <h1>About Us</h1>
-            <p>
+            <h1 id="ab-title">About Us</h1>
+            <p id="ab-para">
                 Bountiful Foods is a company that is passionate about providing
                 its customers with healthy and delicious fruit drinks made from the
                 freshest, locally-sourced fruits available in San Diego, California.
@@ -45,7 +44,6 @@
                 that are both refreshing and satisfying. Join us in our mission to promote healthy living
                 by enjoying one of our fruit drinks today!
             </p>
-
         </section>
         <div id="map">
             <iframe id="map-img"
@@ -53,24 +51,27 @@
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
 
-        <section id="surfers">
-            <img id="surfers-img" src="https://via.placeholder.com/150 " data-src="images/surfers.jpg"
-                alt="surfers on the beach" />
-        </section>
+        <section class="fourimages">
+            <section id="surfers">
+                <img id="surfers-img" src="https://via.placeholder.com/150 " data-src="images/surfers.jpg"
+                    alt="surfers on the beach" />
+            </section>
 
-        <section id="beach">
-            <img id="beach-img" src="https://via.placeholder.com/150 " data-src="images/beach.jpg"
-                alt="The san diego beach" />
-        </section>
+            <section id="beach">
+                <img id="beach-img" src="https://via.placeholder.com/150 " data-src="images/beach.jpg"
+                    alt="The san diego beach" />
+            </section>
 
-        <section id="ocean">
-            <img id="ocean-img" src="https://via.placeholder.com/150 " data-src="images/ocean.jpg" alt="The Ocean" />
-        </section>
+            <section id="ocean">
+                <img id="ocean-img" src="https://via.placeholder.com/150 " data-src="images/ocean.jpg"
+                    alt="The Ocean" />
+            </section>
 
-        <section id="pineapple">
-            <img id="pineapple-img" src="https://via.placeholder.com/150 " data-src="images/pineapple.jpg" alt="A pineapple" />
+            <section id="pineapple">
+                <img id="pineapple-img" src="https://via.placeholder.com/150 " data-src="images/pineapple.jpg"
+                    alt="A pineapple" />
+            </section>
         </section>
-
     </main>
     <footer>
         <div class="directions">
