more changes changes

--- a/FinalWebsite/aboutus.html
+++ b/FinalWebsite/aboutus.html
@@ -45,23 +45,23 @@
                 by enjoying one of our fruit drinks today!
             </p>
         </section>
-        <div id="map">
+        <section id="map">
             <iframe id="map-img"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d429154.7584949196!2d-117.38917835355261!3d32.82481751237785!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d9530fad921e4b%3A0xd3a21fdfd15df79!2sSan%20Diego%2C%20CA!5e0!3m2!1sen!2sus!4v1680569203212!5m2!1sen!2sus"
                 allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
+        </section>
 
-        <section class="fourimages">
+        <section class="firsttwoimages">
             <section id="surfers">
-                <img id="surfers-img" src="https://via.placeholder.com/150 " data-src="images/surfers.jpg"
+                <img id="surfers-img" src="https://via.placeholder.com/150 " data-src="images/surfer2.jpg"
                     alt="surfers on the beach" />
             </section>
-
             <section id="beach">
                 <img id="beach-img" src="https://via.placeholder.com/150 " data-src="images/beach.jpg"
                     alt="The san diego beach" />
             </section>
-
+        </section>
+        <section class="secondtwoimages">
             <section id="ocean">
                 <img id="ocean-img" src="https://via.placeholder.com/150 " data-src="images/ocean.jpg"
                     alt="The Ocean" />
