--- a/FinalWebsite/bountiful.html
+++ b/FinalWebsite/bountiful.html
@@ -28,7 +28,7 @@
     </div>
     <p id="banner"></p>
     <div id="hero">
-        <img src="images/fuitheroimgone.jpg" alt="">
+        <img src="images/heroforever.jpg" alt="">
     </div>
     <main>
         <section id="sandiego">
@@ -44,21 +44,38 @@
                     largest urban park in the United States, Balboa Park, which spans 1,200 acres and
                     features 15 museums, several theaters, and the world-famous San Diego Zoo. </p>
             </section>
+            <section id="mix">
+                <h1>Mix Drink </h1>
+                <button onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';"id="mix">Mix</button>
+            </section>
             <img id="sandiegoimg" src="images/sandiego3.jpg" alt="">
         </section>
         <section id=weatherdrink>
             <section class="weather">
                 <h1 id="weatherhd">Weather</h1>
-                <p id="weatherpara">kvnjsd vnkdsnjs ndksns</p>
+                <img id="weatherhd" src="" alt="Weather Icon" />
+                <h2 class="temp"><span id="t"></span>&deg;F</h2>
+                <p id="condition"></p>
+                <hr />
+                <p class="forcast">
+                  Three Day Forcast:<br />
+                  <span id="one"></span>&deg;F<br />
+                  <span id="two"></span>&deg;F<br />
+                  <span id="three"></span>&deg;F<br />
+                </p>
+                <p>Wind Speed: <span id="ws"></span> mph</p>
+                <p>Humidity: <span id="h"></span></p>
             </section>
+
             <section class="drink">
-                <h1 id="drinkhd">Drink Mixed Order</h1>
-                <p id="drinkpara">sjdccjn dkjncsdk jdcns</p>
+                <h1 id="drinkhd">Mix make your very own drink! 🧃 </h1>
+                <img id="smoothieicon" src="images/fruitdrinkicon.jpg" alt="">
+                <button id="drinkbutton">Enter</button>
             </section>
         </section>
     </main>
     <footer>
-        <div class="directions">p
+        <div class="directions">
             <h2>Directions</h2>
             <p>39700 Cantrell Rd, Temecula, CA 92591</p>
         </div>
