--- a/FinalWebsite/fresh.html
+++ b/FinalWebsite/fresh.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conners Bountiful Website</title>
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/freshpage.css">
     <link rel="stylesheet" href="styles/bountiful.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/large.css">
