final changes for a tuesday night

--- a/FinalWebsite/bountiful.html
+++ b/FinalWebsite/bountiful.html
@@ -28,6 +28,7 @@
     </div>
     <p id="banner"></p>
     <div id="hero">
+        <button id="mix" onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';"id="mix">Mix Drink</button>
         <img src="images/heroforever.jpg" alt="">
     </div>
     <main>
@@ -43,10 +44,6 @@
                     the world, including La Jolla Cove and Coronado Beach. San Diego is home to the
                     largest urban park in the United States, Balboa Park, which spans 1,200 acres and
                     features 15 museums, several theaters, and the world-famous San Diego Zoo. </p>
-            </section>
-            <section id="mix">
-                <h1>Mix Drink </h1>
-                <button onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';"id="mix">Mix</button>
             </section>
             <img id="sandiegoimg" src="images/sandiego3.jpg" alt="">
         </section>
