--- a/FinalWebsite/fresh.html
+++ b/FinalWebsite/fresh.html
@@ -31,26 +31,26 @@
     <h1 id="fresh-h1">Build a Drink!</h1>
     <main id="fresh-main">
         <form id="form">
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" required>
+            <label for="fname">First Name</label><br>
+            <input type="text" id="fname" required style="width: 99%;"><br>
 
-            <label for="email">Email</label>
-            <input type="email" id="email" required>
+            <label for="email">Email</label><br>
+            <input type="email" id="email" required style="width: 97%;"><br>
 
-            <label for="phone">Phone Number</label>
-            <input type="tel" id="phone" required>
+            <label for="phone">Phone Number</label><br>
+            <input type="tel" id="phone" required style="width: 97%;"><br>
 
-            <label>Pick Your Fruits</label>
+            <label>Pick Your Fruits</label><br>
             <div id="select-div">
                 <select id="fruit-1">
                     <option value="NA">None</option>
-                </select>
-                <select id="fruit-2">
+                </select><br>
+                <select id="fruit-2"><br>
                     <option value="NA">None</option>
-                </select>
-                <select id="fruit-3">
+                </select><br>
+                <select id="fruit-3"><br>
                     <option value="NA">None</option>
-                </select>
+                </select><br>
             </div>
 
             <label for="special">Additional Instructions</label>
