Before Final Changes

--- a/FinalWebsite/aboutus.html
+++ b/FinalWebsite/aboutus.html
@@ -8,8 +8,6 @@
     <title>Conners Bountiful Website</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/bountiful.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/large.css">
 </head>
 
 <body>
@@ -75,43 +73,36 @@
     </main>
     <footer>
         <div class="directions">
-            <p>Directions</p>
-            <p2>39700 Cantrell Rd, Temecula, CA 92591</p2>
+            <h2>Directions</h2>
+            <p>39700 Cantrell Rd, Temecula, CA 92591</p>
         </div>
         <div class="contact">
-            <p>Contact</p>
-            <p2>Email:bountiful@gmail.com</p2><br>
-            <p2>Phone: 111-222-3333</p2><br><br>
-            <li>
-                <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-            </li>
-            <li>
-                <a href="https//instagram.com" target="_blank">
-                    <img src="images/instagram_icon.png" alt="insta icon">
-                </a>
-            <li>
-                <a href="https//youtube.com" target="_blank">
-                    <img src="images/YouTubelogo.jpg" alt="insta icon">
-                </a>
-            </li>
+            <h2>Contact</h2>
+            <p>Email:bountiful@gmail.com</p>
+            <p>Phone: 111-222-3333</p><br>
         </div>
         <div class="copyright">
-            <p>Copyright</p>
-            <p2>Conner Wadsworth WDD 230</p2>
+            <h2>Copyright</h2>
+            <p>Conner Wadsworth WDD 230</p>
+            <p>&copy; 2023 Bountiful Foods</p>
+            <p>Last Modified: <span id="lastModified"></span></p>
+            <script src="last-modified.js"></script>
         </div>
-
-        <div>Last Updated: <span id="lastModified"></span></div>
-
-        <div id="year"></div>
-
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https//instagram.com" target="_blank">
+                <img src="images/instagram_icon.png" alt="insta icon">
+            </a>
+            <a href="https//twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+        </div>
     </footer>
     <script src="scripts/bountiful.js"></script>
     <script src="scripts/lazyload.js"></script>
     <script src="scripts/aboutus.js"></script>
-    <script src="lastModified"></script>
-
 </body>
 
 </html>
