--- a/FinalWebsite/bountiful.html
+++ b/FinalWebsite/bountiful.html
@@ -8,8 +8,6 @@
     <title>Conners Bountiful Website</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/bountiful.css">
-    <link rel="stylesheet" href="styles/medium.css">
-    <link rel="stylesheet" href="styles/large.css">
 </head>
 
 <body>
@@ -28,7 +26,8 @@
     </div>
     <p id="banner"></p>
     <div id="hero">
-        <button id="mix" onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';"id="mix">Mix Drink</button>
+        <button id="mix" onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';"
+            id="mix">Mix Drink</button>
         <img src="images/heroforever.jpg" alt="">
     </div>
     <main>
@@ -50,26 +49,34 @@
         <section id=weatherdrink>
             <section class="weather">
                 <h1 id="weatherhd">Weather</h1>
-                <img id="weatherhd" src="" alt="Weather Icon" />
+                <img id="weatherhd"
+                    src="https:raw.githubusercontent.com/visualcrossing/WeatherIcons/main/SVG/1st%20Set%20-%20Color/clear-day.svg"
+                    style="max-width:100%;height:auto;" alt="Weather Icon">
                 <h2 class="temp"><span id="t"></span>&deg;F</h2>
                 <p id="condition"></p>
                 <hr />
                 <p class="forcast">
-                  Three Day Forcast:<br />
-                  <span id="one"></span>&deg;F<br />
-                  <span id="two"></span>&deg;F<br />
-                  <span id="three"></span>&deg;F<br />
+                    Three Day Forcast:<br />
+                    <span id="one"></span>&deg;F<br />
+                    <span id="two"></span>&deg;F<br />
+                    <span id="three"></span>&deg;F<br />
                 </p>
                 <p>Wind Speed: <span id="ws"></span> mph</p>
                 <p>Humidity: <span id="h"></span></p>
             </section>
 
+
             <section class="drink">
                 <h1 id="drinkhd">Mix make your very own drink! 🧃 </h1>
                 <img id="smoothieicon" src="images/fruitdrinkicon.jpg" alt="">
-                <button id="drinkbutton">Enter</button>
+                <button id="mixbutton"
+                    onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';"
+                    id="mix">Mix Drink</button>
+                <p id="drinkCount">Drinks Ordered: <span id="number_ordered"></span></p>
+                <p id="test"></p>
             </section>
         </section>
+
     </main>
     <footer>
         <div class="directions">
@@ -78,33 +85,31 @@
         </div>
         <div class="contact">
             <h2>Contact</h2>
-            <p>Email:bountiful@gmail.com</p><br>
-            <p>Phone: 111-222-3333</p><br><br>
-            <li>
-                <a href="https://facebook.com" target="_blank">
-                    <img src="images/facebook.png" alt="fb icon">
-                </a>
-            </li>
-            <li>
-                <a href="https//instagram.com" target="_blank">
-                    <img src="images/instagram_icon.png" alt="insta icon">
-                </a>
-            <li>
-                <a href="https//youtube.com" target="_blank">
-                    <img src="images/YouTubelogo.jpg" alt="insta icon">
-                </a>
-            </li>
+            <p>Email:bountiful@gmail.com</p>
+            <p>Phone: 111-222-3333</p><br>
         </div>
         <div class="copyright">
             <h2>Copyright</h2>
             <p>Conner Wadsworth WDD 230</p>
             <p>&copy; 2023 Bountiful Foods</p>
-            <p>Last Modified: <span id="modified"></span></p>
+            <p>Last Modified: <span id="lastModified"></span></p>
+            <script src="last-modified.js"></script>
+        </div>
+        <div class="social">
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="fb icon">
+            </a>
+            <a href="https//instagram.com" target="_blank">
+                <img src="images/instagram_icon.png" alt="insta icon">
+            </a>
+            <a href="https//twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
         </div>
     </footer>
-    <script src="scripts/weather.js"></script>
+    <script src="scripts/orders.js"></script>
     <script src="scripts/bountiful.js"></script>
-    <script src="lastModified"></script>
+    <script src="scripts/weather.js"></script>
 
 </body>
 
