--- a/FinalWebsite/bountiful.html
+++ b/FinalWebsite/bountiful.html
@@ -26,7 +26,7 @@
     </div>
     <p id="banner"></p>
     <div id="hero">
-        <button id="mix" onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';"
+        <button id="mix" onclick="window.location.href='https:/conwads.github.io/wdd230/FinalWebsite/fresh.html';"
             id="mix">Mix Drink</button>
         <img src="images/heroforever.jpg" alt="">
     </div>
