--- a/FinalWebsite/aboutus.html
+++ b/FinalWebsite/aboutus.html
@@ -18,9 +18,9 @@
             </a>
             <h4>Bountiful Foods</h4>
             <nav>
-                <li><a href="bountiful.html">HOME</a></li>
-                <li><a href="fresh.html">FRESH</a></li>
-                <li><a href="aboutus.html">ABOUT US</a></li>
+                <a href="bountiful.html">HOME</a>
+                <a href="fresh.html">FRESH</a>
+                <a href="aboutus.html">ABOUT US</a>
             </nav>
         </header>
     </div>
