--- a/FinalWebsite/bountiful.html
+++ b/FinalWebsite/bountiful.html
@@ -18,15 +18,15 @@
             </a>
             <h4>Bountiful Foods</h4>
             <nav>
-                <li><a href="bountiful.html">HOME</a></li>
-                <li><a href="fresh.html">FRESH</a></li>
-                <li><a href="aboutus.html">ABOUT US</a></li>
+                <a href="bountiful.html">HOME</a>
+                <a href="fresh.html">FRESH</a>
+                <a href="aboutus.html">ABOUT US</a>
             </nav>
         </header>
     </div>
     <p id="banner"></p>
     <div id="hero">
-        <button id="mix" onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';" id="mix">Mix Drink</button>
+        <button id="mix1" onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';">Mix Drink</button>
         <img src="images/heroforever.jpg" alt="">
     </div>
     <main>
@@ -48,8 +48,7 @@
         <section id=weatherdrink>
             <section class="weather">
                 <h1 id="weatherhd">Weather</h1>
-                <img id="weatherhd"
-                    src="https:raw.githubusercontent.com/visualcrossing/WeatherIcons/main/SVG/1st%20Set%20-%20Color/clear-day.svg"
+                <img id="weatherimg" src="//raw.githubusercontent.com/visualcrossing/WeatherIcons/main/SVG/1st%20Set%20-%20Color/clear-day.svg"
                     style="max-width:100%;height:auto;" alt="Weather Icon">
                 <h2 class="temp"><span id="t"></span>&deg;F</h2>
                 <p id="condition"></p>
@@ -69,8 +68,7 @@
                 <h1 id="drinkhd">Mix make your very own drink! 🧃 </h1>
                 <img id="smoothieicon" src="images/fruitdrinkicon.jpg" alt="">
                 <button id="mixbutton"
-                    onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';"
-                    id="mix">Mix Drink</button>
+                    onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';">Mix Drink</button>
                 <p id="drinkCount">Drinks Ordered: <span id="number_ordered"></span></p>
                 <p id="test"></p>
             </section>
