--- a/FinalWebsite/fresh.html
+++ b/FinalWebsite/fresh.html
@@ -19,9 +19,9 @@
             </a>
             <h4>Bountiful Foods</h4>
             <nav>
-                <li><a href="bountiful.html">HOME</a></li>
-                <li><a href="fresh.html">FRESH</a></li>
-                <li><a href="aboutus.html">ABOUT US</a></li>
+                <a href="bountiful.html">HOME</a>
+                <a href="fresh.html">FRESH</a>
+                <a href="aboutus.html">ABOUT US</a>
             </nav>
         </header>
     </div>
@@ -41,7 +41,7 @@
             <input id="email" name="email" type="email" required />
             <label for="phone">Phone*:</label>
             <input id="phone" name="phone" type="tel" required />
-            <label for="member">Fruit options: </label>
+            <label id="member" >Fruit options: </label>
             <select name="fruit_name" id="one_fruits">
                 <option value="">--Select--</option>
             </select><br><br>
@@ -88,7 +88,6 @@
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
         </div>
-    </footer>
     </footer>
     <script src="scripts/bountiful.js"></script>
     <script src="scripts/drinkmix.js"></script>
