--- a/FinalWebsite/bountiful.html
+++ b/FinalWebsite/bountiful.html
@@ -26,7 +26,7 @@
     </div>
     <p id="banner"></p>
     <div id="hero">
-        <button id="mix1" onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';">Mix Drink</button>
+        <button id="mix1" onclick="window.location.href='fresh.html';">Mix Drink</button>
         <img src="images/heroforever.jpg" alt="">
     </div>
     <main>
@@ -68,7 +68,7 @@
                 <h1 id="drinkhd">Mix make your very own drink! 🧃 </h1>
                 <img id="smoothieicon" src="images/fruitdrinkicon.jpg" alt="">
                 <button id="mixbutton"
-                    onclick="window.location.href='https:conwads.github.io/wdd230/FinalWebsite/fresh.html';">Mix Drink</button>
+                    onclick="window.location.href='fresh.html';">Mix Drink</button>
                 <p id="drinkCount">Drinks Ordered: <span id="number_ordered"></span></p>
                 <p id="test"></p>
             </section>
