Sizing issues fixed

--- a/FinalWebsite/fresh.html
+++ b/FinalWebsite/fresh.html
@@ -27,7 +27,7 @@
     </div>
     <p id="banner"></p>
     <div id="title">
-        <h1 id="fresh-h1">Build a Drink!</h1>
+        <h1 id="fresh-h1">Build your own Drink!</h1>
     </div>
     <main id="fresh">
         <div id="fresh_content">
@@ -35,22 +35,22 @@
             <h1 id="carbcalc"></h1>
         </div>
         <form method="post" action="order-received-page">
-            <label for="fname">First Name*:</label>
+            <label for="fname">First Name:</label>
             <input id="fname" name="firstname" required />
-            <label for="email">Email*:</label>
+            <label for="email">Email:</label>
             <input id="email" name="email" type="email" required />
-            <label for="phone">Phone*:</label>
+            <label for="phone">Phone Number:</label>
             <input id="phone" name="phone" type="tel" required />
             <label id="member" >Fruit options: </label>
-            <select name="fruit_name" id="one_fruits">
+            <select name="fruit_name" id="fruitone">
                 <option value="">--Select--</option>
             </select><br><br>
 
-            <select name="fruit_name2" id="two_fruits">
+            <select name="fruit_name2" id="fruittwo">
                 <option value="">--Select--</option>
             </select><br><br>
 
-            <select name="fruit_name3" id="three_fruits">
+            <select name="fruit_name3" id="fruitthree">
                 <option value="">--Select--</option>
             </select>
 
